[gd_scene load_steps=15 format=3 uid="uid://bb2hcbb3vaxyu"]

[ext_resource type="Script" path="res://Scripts/UI/HUD.gd" id="1_n7kud"]
[ext_resource type="JSON" path="res://Scripts/Dialogue/Test_dialogue.json" id="2_o1v84"]
[ext_resource type="Theme" uid="uid://24bml6th7hoi" path="res://Graphics/UI/Def_UI.theme" id="2_v80lq"]
[ext_resource type="Texture2D" uid="uid://bqcok4y83au00" path="res://Graphics/UI/HUD/health_radial_0.png" id="3_v2uxw"]
[ext_resource type="Texture2D" uid="uid://dvxf4do6lmw1h" path="res://Graphics/UI/HUD/health_radial_2.png" id="4_iclye"]
[ext_resource type="Script" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="5_8mc7c"]
[ext_resource type="PackedScene" uid="uid://bldggv8gt1tht" path="res://Scripts/UI/dialogue_box.tscn" id="6_4dfct"]
[ext_resource type="Texture2D" uid="uid://ruijco38yggy" path="res://Graphics/UI/AtlasController.png" id="8_786k8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8f6y2"]
atlas = ExtResource("8_786k8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_ku1is"]
font_size = 18
outline_size = 2
outline_color = Color(0, 0, 0, 0.501961)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.501961)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_3bwea"]
font_size = 18
font_color = Color(1, 1, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 0.501961)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.501961)

[sub_resource type="Animation" id="Animation_iu6pd"]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_i7dvw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ujh3"]
_data = {
"Fade": SubResource("Animation_iu6pd"),
"RESET": SubResource("Animation_i7dvw")
}

[node name="HUD" type="CanvasLayer" groups=["system", "user_interface"]]
process_mode = 3
script = ExtResource("1_n7kud")
dialogue_json = ExtResource("2_o1v84")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(600, 400)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("2_v80lq")

[node name="Diaract" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Control/Diaract"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="DialogueBox" parent="Control/Diaract/Control" instance=ExtResource("6_4dfct")]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -96.0
offset_bottom = 96.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Control2" type="Control" parent="Control/Diaract"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Diaract/Control2"]
clip_children = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -20.0
offset_right = 62.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="TextureRect" parent="Control/Diaract/Control2/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_8f6y2")

[node name="InteractText" type="Label" parent="Control/Diaract/Control2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
text = "Activate"
label_settings = SubResource("LabelSettings_ku1is")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -152.0
offset_right = 152.0
grow_vertical = 0
max_value = 8.0
fill_mode = 3
texture_under = ExtResource("3_v2uxw")
texture_progress = ExtResource("4_iclye")
tint_progress = Color(0, 1, 0, 1)

[node name="CoinCounter" type="Label" parent="Control"]
layout_mode = 1
offset_right = 1280.0
offset_bottom = 37.0
text = "Coins: 0"
label_settings = SubResource("LabelSettings_3bwea")

[node name="EzDialogue" type="Node" parent="Control"]
script = ExtResource("5_8mc7c")

[node name="FadeTransition" type="AnimationPlayer" parent="Control"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_4ujh3")
}

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[connection signal="dialogue_generated" from="Control/EzDialogue" to="." method="_on_ez_dialogue_dialogue_generated"]
